Fix thumbnails for overflowing pages created in older Blooms (BL-13609)

--- a/src/content/bookLayout/basePage.less
+++ b/src/content/bookLayout/basePage.less
@@ -143,10 +143,6 @@ div.bloomPlayer-page {
 
 /* gridItem means this is a page thumbnail */
 .gridItem {
-    .pageOverflows {
-        height: 100%;
-    }
-
     .pageOverflowsIcon {
         /* red triangle with exclamation point */
         background-image: url("/bloom/images/Attention.svg");
